Another Css Selectors

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -3,7 +3,9 @@
   <head>
     <title>CSS Basic</title>
 
-    <link rel="stylesheet" href="../CSS/style.css">
+    <!-- <link rel="stylesheet" href="../CSS/psuedo-class selector.css" />
+    <link rel="stylesheet" href="../CSS/psuedo-elements selector.css" /> -->
+    <link rel="stylesheet" href="../CSS/Attribute Selector.css" />
     <!-- <style>
         p{
             border: 1px solid red;
@@ -14,35 +16,45 @@
     </style> -->
   </head>
   <body>
-      <h2> WELCOME </h2>
-    <p class="para">
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta asperiores
-      repellendus, in pariatur fuga nemo aspernatur numquam, voluptas beatae
-      provident, perspiciatis iure doloremque qui iste! Officiis maiores beatae
-      necessitatibus atque.
-    </p>
-    <p class="para" id="para-1">
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta asperiores
-      repellendus, in pariatur fuga nemo aspernatur numquam, voluptas beatae
-      provident, perspiciatis iure doloremque qui iste! Officiis maiores beatae
-      necessitatibus atque.
-    </p>
-    <p class="para">
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta asperiores
-      repellendus, in pariatur fuga nemo aspernatur numquam, voluptas beatae
-      provident, perspiciatis iure doloremque qui iste! Officiis maiores beatae
-      necessitatibus atque.
-    </p>
-    <p class="para">
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta asperiores
-      repellendus, in pariatur fuga nemo aspernatur numquam, voluptas beatae
-      provident, perspiciatis iure doloremque qui iste! Officiis maiores beatae
-      necessitatibus atque.
-    </p>
+    <div>
+      <p id="para">Para 1</p>
+      <h1 class="head">Heading 1</h1>
+      <p>para 2</p>
+      <div>
+        <p>para 6</p>
+        <h1>Heading 2</h1>
+        <div>
+          <p>para 7</p>
+        </div>
+        <p class="head">para 5</p>
+        <span>
+          <p>para 3</p>
+        </span>
+      </div>
+      <p>para 4</p>
+    </div>
 
-    <button class="button" id="btn1"> Add </button>
-    <button class="button" id="btn2"> Edit </button>
-    <button class="button" id="btn3"> Delete </button>
+    <a href="#"> Link </a> <br />
+    <a href="#"> Link 2 </a> <br />
 
+    <input type="text" /> <br />
+
+    <button class="btn">Edit</button>
+
+    <div class="container">
+      <p class="para-1">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
+        exercitationem incidunt eius corporis dignissimos sit odit magnam in
+        magni provident, ratione, quibusdam culpa laboriosam temporibus omnis
+        minima maxime! Rem, enim!
+      </p>
+      <p>para</p>
+      <p>para</p>
+      <p>para</p>
+      <p>para</p>
+      <p>para</p>
+
+      <input type="text">
+    </div>
   </body>
 </html>
