--- a/CSS/FlexBox/index.html
+++ b/CSS/FlexBox/index.html
@@ -3,25 +3,21 @@
 
   <head>
     <title> FlexBox </title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style1.css"/>
   </head>
 
   <body>
 
-    <div class="container">
-      <div class="item"> 1 </div>
-      <div class="item"> 2 </div>
-      <div class="item"> 3 </div>
-      <div class="item"> 4 </div>
-      <div class="item"> 5 </div>
-      <div class="item"> 6 </div>
-      <div class="item"> 7 </div>
-      <div class="item"> 8 </div>
-      <div class="item"> 9 </div>
-      <div class="item"> 10  </div>
-      <div class="item"> 11 </div>
-      <div class="item"> 12 </div>
-    </div>
+   <div class="container">
+    <div class="box" id="box-1">box-1</div>
+    <div class="box" id="box-2">box-2</div>
+    <div class="box" id="box-3">box-3</div>
+    <div class="box" id="box-4">box-4</div>
+    <div class="box" id="box-5">box-5</div>
+    <div class="box" id="box-6">box-6</div>
+    <div class="box" id="box-7">box-7</div>
+    <div class="box" id="box-8">box-8</div>
+   </div>
 
   </body>
 
