Position, Overflow, Float and Clear

--- a/CSS/Positions/index.html
+++ b/CSS/Positions/index.html
@@ -34,7 +34,20 @@
   </head>
   <body>
     <h1>Positions In CSS</h1>
-    <ol>
+
+
+    <div class="container">
+      <div class="box red"> Relative </div>
+      <div class="box green"> Absolute </div>
+      <div class="box blue"> Fixed </div>
+      <div class="box purple"> Sticky </div>
+    </div>
+
+    <div class="spacer"> </div>
+
+
+
+    <!-- <ol>
       <li>static : The original or default Position of an element.</li>
 
       <li>
@@ -72,7 +85,7 @@
 
       <nav>This is nav- Bar</nav>
       
-    </div>
+    </div> -->
 
   </body>
 </html>
