--- a/JavaScript/Asynch JS/index.html
+++ b/JavaScript/Asynch JS/index.html
@@ -17,7 +17,11 @@
 
     <!-- <script src="promises.js"></script> -->
 
-    <script src="promises2.js"></script>
+    <!-- <script src="promises2.js"></script> -->
     
+    <!-- <script src="async-await.js"></script> -->
+
+    <script src="fetch.js"></script>
+   
 </body>
 </html>
