--- a/Projects/Portfolio/Html/projects.html
+++ b/Projects/Portfolio/Html/projects.html
@@ -20,89 +20,115 @@
 
     <main>
         <div class="section-content">
+
           <fieldset class="project-name box">
             <legend> HTML | CSS | JavaScript</legend>
+
             <div class="link"> 
               Diployment Link : <a href="https://hritik-upadhyay.github.io/Youtube-clone/"> Youtube Clone </a>
             </div>
+
             <span> Youtube Clone </span>
-            <ul>
-                <li> Developed a YouTube clone using HTML, CSS, and JavaScript. </li>
-                <li> The main objective of this project is to replicate the core features and functionalities of YouTube. </li>
-                <li> Users can search for videos using the search bar provided in the clone. </li>
-                <li> The clone leverages the YouTube Google Console API key to fetch data from YouTube in real-time. </li>
-                <li> The API integration ensures that the clone can retrieve up-to-date video data from YouTube's vast library. </li>
-                <li> By utilizing HTML, CSS, and JavaScript, the clone offers a responsive and interactive interface. </li>
-                <li> The project showcases the ability to interact with external APIs, in this case, the YouTube API, to retrieve and display relevant video content. </li>
-                <li> Overall, the YouTube clone project provides an opportunity to gain practical experience in web development while replicating the popular features of YouTube. </li>
-            </ul>
+
+            <div class="bullet-points">
+                <p> Developed a YouTube clone using HTML, CSS, and JavaScript. </p>
+                <p> The main objective of this project is to replicate the core features and functionalities of YouTube. </p>
+                <p> Users can search for videos using the search bar provided in the clone. </p>
+                <p> The clone leverages the YouTube Google Console API key to fetch data from YouTube in real-time. </p>
+                <p> The API integration ensures that the clone can retrieve up-to-date video data from YouTube's vast library. </p>
+                <p> By utilizing HTML, CSS, and JavaScript, the clone offers a responsive and interactive interface. </p>
+                <p> The project showcases the ability to interact with external APIs, in this case, the YouTube API, to retrieve and display relevant video content. </p>
+                <p> Overall, the YouTube clone project provides an opportunity to gain practical experience in web development while replicating the popular features of YouTube. </p>
+            </div>
+
           </fieldset>
+
           <fieldset class="project-name box">
             <legend> HTML | CSS | JavaScript </legend>
+
             <div class="link"> 
               Diployment Link : <a href="https://hritik-upadhyay.github.io/Auction-Status/"> Auction Status </a>
             </div>
+
             <span> Auction Status </span>
-            <ul class="unset">
-              <li> Developed an Auction Status app using HTML, CSS, and JavaScript. </li>
-              <li> Created a user-friendly interface to track real-time cryptocurrency prices and participate in online auctions. </li>
-              <li> Implemented API integration to fetch cryptocurrency data from a reliable source. </li>
-              <li> Utilized HTML to structure the app's components, CSS for styling, and JavaScript for interactivity. </li>
-              <li> This project highlights skills in web development, API integration, real-time data retrieval, and creating interactive user interfaces. </li>
-              <li> The Auction Status app showcases the ability to combine HTML, CSS, and JavaScript to build a functional and engaging application. </li>
-              <li> Overall, the project demonstrates expertise in frontend web development, API utilization, and building data-driven applications. </li>
-            </ul>
+
+            <div class="bullet-points">
+                <p> Developed an Auction Status app using HTML, CSS, and JavaScript. </p>
+                <p> Created a user-friendly interface to track real-time cryptocurrency prices and participate in online auctions. </p>
+                <p> Implemented API integration to fetch cryptocurrency data from a reliable source. </p>
+                <p> Utilized HTML to structure the app's components, CSS for styling, and JavaScript for interactivity. </p>
+                <p> This project highlights skills in web development, API integration, real-time data retrieval, and creating interactive user interfaces. </p>
+                <p> The Auction Status app showcases the ability to combine HTML, CSS, and JavaScript to build a functional and engaging application. </p>
+                <p> Overall, the project demonstrates expertise in frontend web development, API utilization, and building data-driven applications. </p>
+            </div>
+
           </fieldset>
+
           <fieldset class="project-name box">
             <legend> Java | OOPS | SpringBoot | JPA(Hibernate) </legend>
+
             <div class="link">
               Github Repository : <a href="https://github.com/HRITIK-UPADHYAY/Indian_Bazzar-Java-SpringBoot/tree/main/src/main/java/com/backend/IndianBazzar"> Indian Bazzar </a>
             </div>
+
             <span> Indian Bazzar </span>
-            <ul>
-                <li> Developed an e-commerce project using the SpringBoot framework. </li>
-                <li> Built a robust system with functionalities for managing customers, products, and sellers. </li>
-                <li> Implemented features for handling orders and managing cart items.</li>
-                <li> Integrated email notification system to send real-time notifications upon order placement. </li>
-                <li> Utilized databases for efficient storage and retrieval of customer, product, and order information. </li>
-                <li> Implemented a seamless cart system with features like adding, updating, and removing items. </li>
-                <li> The project demonstrates proficiency in the SpringBoot framework, e-commerce functionality implementation, and real-time email notifications. </li>
-                <li> Overall, the e-commerce project showcases skills in backend development, database management, and building a comprehensive system for online buying and selling. </li>
-            </ul>
+
+            <div class="bullet-points">
+                <p> Developed an e-commerce project using the SpringBoot framework. </p>
+                <p> Built a robust system with functionalities for managing customers, products, and sellers. </p>
+                <p> Implemented features for handling orders and managing cart items.</p>
+                <p> Integrated email notification system to send real-time notifications upon order placement. </p>
+                <p> Utilized databases for efficient storage and retrieval of customer, product, and order information. </p>
+                <p> Implemented a seamless cart system with features like adding, updating, and removing items. </p>
+                <p> The project demonstrates proficiency in the SpringBoot framework, e-commerce functionality implementation, and real-time email notifications. </p>
+                <p> Overall, the e-commerce project showcases skills in backend development, database management, and building a comprehensive system for online buying and selling. </p>
+            </div>
+
           </fieldset>
+
           <fieldset class="project-name box">
             <legend> Java | OOPS | SpringBoot | JPA(Hibernate) </legend>
+
             <div class="link">
               Github Repository : <a href="https://github.com/HRITIK-UPADHYAY/Parking_Management_System-java-SpringBoot/tree/main/Parking/src/main/java/com/example/Parking"> Parking Management System </a>
             </div>
+
             <span> Parking Management System </span>
-            <ul>
-                <li> Developed a parking lot management project as a backend developer using the SpringBoot framework. </li>
-                <li> Implemented a robust system for efficiently managing parking slots, customers, and lots. d</li>
-                <li> Designed functionalities for adding and managing customers, parking slots, and lots. </li>
-                <li> Integrated real-time email notification feature to send notifications to registered email addresses. </li>
-                <li> Utilized databases for efficient storage and retrieval of customer and parking slot information. </li>
-                <li> The project showcases skills in database management, authentication, real-time email notifications, and system design. </li>
-                <li> Overall, the parking lot management project highlights the ability to develop a robust backend system for efficient parking slot management using SpringBoot. </li>
-            </ul>
+
+            <div class="bullet-points">
+                <p> Developed a parking lot management project as a backend developer using the SpringBoot framework. </p>
+                <p> Implemented a robust system for efficiently managing parking slots, customers, and lots. d</p>
+                <p> Designed functionalities for adding and managing customers, parking slots, and lots. </p>
+                <p> Integrated real-time email notification feature to send notifications to registered email addresses. </p>
+                <p> Utilized databases for efficient storage and retrieval of customer and parking slot information. </p>
+                <p> The project showcases skills in database management, authentication, real-time email notifications, and system design. </p>
+                <p> Overall, the parking lot management project highlights the ability to develop a robust backend system for efficient parking slot management using SpringBoot. </p>
+            </div>
+
           </fieldset>
+
           <fieldset class="project-name box">
             <legend> Java | JSP | Servlet </legend>
+
             <div class="link">
               Github Repository : <a href="https://github.com/HRITIK-UPADHYAY/Calculator/blob/main/Calculator/src/main/java/com/mycompany/calculator/CalculatorMain.java"> Calculator </a>
             </div>
-            <span> Calculator </span>
-            <ul>
-                <li> Developed a calculator project using Java, JSP (JavaServer Pages), and Servlet technology. </li>
-                <li> The project's primary objective is to provide a simple and user-friendly calculator interface accessible through a web browser. </li>
-                <li> Leveraged JSP and Servlet to build the calculator's functionality and perform calculations dynamically. </li>
-                <li> Designed an intuitive user interface with buttons and input fields for numerical and arithmetic operations. </li>
-                <li> he calculator can handle basic arithmetic operations such as addition, subtraction, multiplication, and division.
-                    Utilized Java programming language to implement the business logic behind the calculations.</li>
 
-                <li> Overall, the calculator project highlights the ability to build a dynamic web application using Java, JSP, and Servlet, offering users a convenient and interactive tool for performing calculations online.</li>
-            </ul>
+            <span> Calculator </span>
+
+            <div class="bullet-points">
+                <p> Developed a calculator project using Java, JSP (JavaServer Pages), and Servlet technology. </p>
+                <p> The project's primary objective is to provide a simple and user-friendly calculator interface accessible through a web browser. </p>
+                <p> Leveraged JSP and Servlet to build the calculator's functionality and perform calculations dynamically. </p>
+                <p> Designed an intuitive user interface with buttons and input fields for numerical and arithmetic operations. </p>
+                <p> he calculator can handle basic arithmetic operations such as addition, subtraction, multiplication, and division.
+                    Utilized Java programming language to implement the business logic behind the calculations.</p>
+
+                <p> Overall, the calculator project highlights the ability to build a dynamic web application using Java, JSP, and Servlet, offering users a convenient and interactive tool for performing calculations online.</p>
+            </div>
+
           </fieldset>
+
         </div>
     </main>
 
