--- a/Projects/Portfolio/index.html
+++ b/Projects/Portfolio/index.html
@@ -32,11 +32,11 @@
           <fieldset> 
             <legend> Resume </legend>
             <div class="viewResume">
-              <a href="./Resume/HRITIK_UPADHYAY-Resume.pdf"> View </a>
+              <a href="./Resume/HRITIK_UPADHYAY_Resume.pdf"> View </a>
               <i class="fa-solid fa-eye fa-sm" style="color: #ffffff;"></i>
             </div>
             <div class="downloadResume">
-              <a href="./Resume/HRITIK_UPADHYAY-Resume.pdf" download> Download </a>
+              <a href="./Resume/HRITIK_UPADHYAY_Resume.pdf" download> Download </a>
               <i class="fa-solid fa-file-arrow-down" style="color: #ffffff;"></i>
             </div>
           </fieldset>
@@ -63,7 +63,7 @@
             </div>
             <div class="image">
             <img
-            src="./Images/HRITIK_UPADHYAY_Image.jpeg"
+            src="./Images/HRITIK_UPADHYAY-Image.jpeg"
             alt="HRITIK UPADHYAY Image"">
             </div>
           </div>
@@ -118,7 +118,7 @@
             <div class="tech">JavaScript</div>
           </div>
           <div class="moreDetail">
-             <span> For More Details  <a href="../Html/skills.html"> Click Here </a></span>
+             <span> For More Details  <a href="./Html/skills.html"> Click Here </a></span>
           </div>
         </div>
       </section>
@@ -180,7 +180,7 @@
             </div>
           </div>
           <div class="moreDetail">
-            <span> For More Details  <a href="../Html/projects.html"> Click Here </a></span>
+            <span> For More Details  <a href="./Html/projects.html"> Click Here </a></span>
          </div>
         </div>
       </section>
