--- a/Projects/Portfolio/index.html
+++ b/Projects/Portfolio/index.html
@@ -32,11 +32,11 @@
           <fieldset> 
             <legend> Resume </legend>
             <div class="viewResume">
-              <a href="./Resume/HRITIK_UPADHYAY_Resume.pdf"> View </a>
+              <a href="./Resume/HRITIK UPADHYAY Resume.pdf.pdf"> View </a>
               <i class="fa-solid fa-eye fa-sm" style="color: #ffffff;"></i>
             </div>
             <div class="downloadResume">
-              <a href="./Resume/HRITIK_UPADHYAY_Resume.pdf" download> Download </a>
+              <a href="./Resume/HRITIK UPADHYAY Resume.pdf.pdf" download> Download </a>
               <i class="fa-solid fa-file-arrow-down" style="color: #ffffff;"></i>
             </div>
           </fieldset>
