--- a/Projects/Portfolio/Html/projects.html
+++ b/Projects/Portfolio/Html/projects.html
@@ -44,6 +44,29 @@
           </fieldset>
 
           <fieldset class="project-name box">
+            <legend> HTML | CSS | JavaScript</legend>
+
+            <div class="link"> 
+              Diployment Link : <a href="https://hritik-upadhyay.github.io/Simple_Notes_App-Html-Css-JavaScript/"> Notes App </a>
+            </div>
+
+            <span> Simple Notes App </span>
+
+            <div class="bullet-points">
+                <p> Developed a notes application using HTML, CSS, and JavaScript with localStorage integration for data storage. </p>
+                <p> Enabled users to create, edit, and delete notes directly in the web browser for easy information management. </p>
+                <p> User-Friendly Interface: Designed an intuitive, clean UI using HTML and CSS for enhanced user experience. </p>
+                <p> Create and Edit Notes: Implemented functionality for users to create and edit notes, complete with titles and content. </p>
+                <p> localStorage Integration: Utilized JavaScript's localStorage API to store notes locally, ensuring persistence across sessions. </p>
+                <p> Note Deletion: Enabled simple note deletion through an intuitive interface. </p>
+                <p> Gained hands-on experience with HTML, CSS, and JavaScript. </p>
+                <p> Improved skills in responsive web design and user interface development.
+                  Strengthened problem-solving abilities and user experience design principles. </p>
+            </div>
+
+          </fieldset>
+
+          <fieldset class="project-name box">
             <legend> HTML | CSS | JavaScript </legend>
 
             <div class="link"> 
@@ -60,6 +83,65 @@
                 <p> This project highlights skills in web development, API integration, real-time data retrieval, and creating interactive user interfaces. </p>
                 <p> The Auction Status app showcases the ability to combine HTML, CSS, and JavaScript to build a functional and engaging application. </p>
                 <p> Overall, the project demonstrates expertise in frontend web development, API utilization, and building data-driven applications. </p>
+            </div>
+
+          </fieldset>
+
+          <fieldset class="project-name box">
+            <legend> Java | JSP | Servlet </legend>
+
+            <div class="link">
+              Github Repository : <a href="https://hritik-upadhyay.github.io/Quiz-App-Html-Css-JavaScript/"> Quiz App </a>
+            </div>
+
+            <span> Quiz App </span>
+
+            <div class="bullet-points">
+                <p> Developed an engaging and interactive quiz application using HTML, CSS, and JavaScript, providing users with an enjoyable learning experience. </p>
+                <p> User-Friendly Interface: Designed an attractive and intuitive user interface using HTML and CSS for seamless navigation. </p>
+                <p> Dynamic Quiz Generation: Implemented JavaScript logic to dynamically generate questions and options from a predefined dataset. </p>
+                <p> Real-Time Feedback: Provided immediate feedback to users on their selected answers, enhancing the learning process. </p>
+                <p> core Tracking: Developed a scoring system to calculate and display users' scores based on correct answers. </p>
+                <p> Overall, the calculator project highlights the ability to build a dynamic web application using Java, JSP, and Servlet, offering users a convenient and interactive tool for performing calculations online.</p>
+            </div>
+
+          </fieldset>
+
+          <fieldset class="project-name box">
+            <legend> Java | JSP | Servlet </legend>
+
+            <div class="link">
+              Github Repository : <a href="https://hritik-upadhyay.github.io/Random_Password_Generator-Html-Css-JavaScript/"> Random Password Generator </a>
+            </div>
+
+            <span> Random Password Generator </span>
+
+            <div class="bullet-points">
+                <p> Designed and implemented a secure and user-friendly random password generator using a combination of HTML, CSS, and JavaScript to enhance online security and convenience. </p>
+                <p> User-Centric Design: Created an intuitive and visually appealing user interface using HTML and CSS, ensuring ease of use and a positive user experience. </p>
+                <p> Secure Passwords: Utilized JavaScript to generate complex and randomized passwords with a mix of uppercase, lowercase, numbers, and special characters. </p>
+                <p> Customizable Options: Implemented user-selectable options such as password length and character types, allowing for personalized password generation. </p>
+                <p> Copy to Clipboard: Integrated a feature that enabled users to copy the generated password to their clipboard with a single click, streamlining the usage process. </p>
+            </div>
+
+          </fieldset>
+
+          <fieldset class="project-name box">
+            <legend> Java | JSP | Servlet </legend>
+
+            <div class="link">
+              Github Repository : <a href="https://hritik-upadhyay.github.io/Random-Color-Generator/"> Random Color Generator </a>
+            </div>
+
+            <span> Random Color Generator </span>
+
+            <div class="bullet-points">
+                <p> Developed a dynamic web application using HTML, CSS, and JavaScript that generates random colors on user interaction. </p>
+                <p> Created an engaging tool to explore a wide range of colors for design and creative purposes. </p>
+                <p> User-Friendly Interface: Designed a visually appealing interface using HTML and CSS to enhance user engagement. </p>
+                <p> Random Color Generation: Implemented JavaScript logic to generate and display random colors with each user click. </p>
+                <p> Color Information: Provided hexadecimal and RGB color codes, allowing users to easily replicate their favorite colors. </p>
+                <p> Copy to Clipboard: Integrated a feature to copy the color code to the clipboard, streamlining the design workflow. </p>
             </div>
 
           </fieldset>
